# M2-Coursework

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO.md  environment.yml  pyproject.toml  requirements.txt  sweep.py  sweep_context_length.py
.github/workflows/: deploy-existing-html.yml
Nice Visualization/: comparison-table.html  time-series-transformation.html  tokenization-padding-comparison.html
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: genindex.html  index.html  (+1 more)
docs/_static/: custom.css
docs/notebooks/: 3_untrained_behaviour.ipynb
log_files/: flops_log.csv
notebooks/: 1_dataset_preprocess.ipynb  2_flops_calculation.ipynb  3_untrained_behaviour.ipynb  4_train_lora_llm.ipynb  5_trained_behaviour.ipynb  7_weight_visualize.ipynb  weight_visualize.ipynb
notebooks/checkpoints/: checkpoint_best.pth  checkpoint_step_200.pth
public/: .buildinfo  objects.inv  search.html  searchindex.js
public/_modules/: Trainer.html  index.html  lora_weights.html
public/notebooks/: 2_flops_calculation.html  4_train_lora_llm.html  4_train_lora_llm.ipynb  6_fully_trained_behaviour.html
report/: ToWrite.md  course_work.sty
report/M2 Course Work/: main (16).tex  main.tex  reference.bib
src/: Trainer.py  __init__.py  experiment.py  experiment_context_length.py  experiment_final.py  experiment_initial.py  get_data.py  get_flops.py  lora_weights.py  preprocessor.py  sweep.py  sweep_context_length.py
tests/: conftest.py  test_get_data.py  test_get_flops.py  test_preprocessor.py
(+19 files in other folders)
